Include JWT in backend configuration